// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parallel job scheduling parallel job scheduling - test case 1 1`] = `
[
  [
    "C",
    "D",
    "E",
    "F",
  ],
  [
    "B",
  ],
  [
    "A",
  ],
]
`;

exports[`parallel job scheduling parallel job scheduling - test case 2 1`] = `
[
  [
    "C",
    "D",
    "E",
    "G",
  ],
  [
    "B",
    "F",
  ],
  [
    "A",
  ],
]
`;
